--- a/app/globals.css
+++ b/app/globals.css
@@ -82,3 +82,19 @@ body {
     @apply bg-background text-foreground;
   }
 }
+
+@supports (align-content: center) {
+  .container {
+    align-content: center;
+    width: 100%;
+    height: 100svh;
+  }
+}
+
+/* Для старых браузеров и не поддерживающих свойство */
+.container {
+  display: grid; /*или flex*/
+  align-content: center;
+  width: 100%;
+  height: 100svh;
+}
