--- a/app/globals.css
+++ b/app/globals.css
@@ -68,3 +68,14 @@ body {
 [data-ut-element="button"][data-state="uploading"]::after {
   @apply bg-primary/50;
 }
+
+
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+}
